--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <button onclick="function1()">Click here!</button>
 </div>
 <div id="secondpage">
-<h3>It's 14 February</h3>
+<h1 class="grey">It's 14 February,</h1>
 <h1>When soulmates meet,<br>hearts show their love, <br>and over all those years, <br>you're the one who stole my heart<span class="glyphicon glyphicon-heart"></span></h1>
 <h2>Love u forever and always!</h2>
 <img src="miss-you.gif">
@@ -48,8 +48,8 @@ h2 {
     color:red;
     text-align: center;
 }
-h3{
-    text-align: center;
+.grey{
+    color:rgb(58, 57, 57);
 }
 #secondpage {
     display: none;
